overflow fixed with overflow-wrap: break-word

--- a/src/components/ChatRoom/Messages/messages.scss
+++ b/src/components/ChatRoom/Messages/messages.scss
@@ -47,6 +47,7 @@
     display: inline-block;
     max-width: 80%;
     position: relative;
+    overflow-wrap: break-word;
 
     &::before {
       content: "";
@@ -67,6 +68,7 @@
       max-width: 80%;
       background-color: $eventColorBlue;
       color: $eventColorPurple;
+      text-align: left;
 
       &::before {
         left: auto;
